Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18863

Print warnings for inconsistent nodemap offset values

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.17.0
    • 3
    • 9223372036854775807

      When offsets are defined on a nodemap, admins need to be aware that other nodemap properties such as squash values or explicit mappings have to be consistent with the offset range.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: