LU-18863 nodemap: warning for inconsistencies with offset

When offsets are defined on a nodemap, other properties related to id
mapping are impacted.
All squash values should be in the offset range [ 0, offset_limit-1 ],
otherwise squashed ids would escape offsetting.
Any explicit id mapping should map to an fsid in the offset range,
otherwise the mapped id would escape offsetting.
And the offset limit itself should be defined so that nobody (65534)
is included in the offset range.
lctl nodemap_add_offset, nodemap_modify and nodemap_add_idmap commands
are modified to print a warning when such an inconsistency is
detected.
lctl-nodemap-add-idmap.8, lctl-nodemap-add-offset.8 and
lctl-nodemap-modify.8 manpages are updated to explain these
constraints.

Test-Parameters: trivial testlist=sanity-sec
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I129265e73957660da34837444238fbb98c620240
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58570
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>